<resources>
    <string name="app_name">Total Asset Calculator</string>
    <string name="dollar_sign">$</string>
    <string name="view">View</string>
    <string name="add">Add</string>
    <string name="add_new_asset">Add new asset</string>
    <string name="asset_type">Asset Type</string>
    <string name="stocks">Stocks</string>
    <string name="crypto">Crypto</string>
    <string name="other_not_fetched">Other</string>
    <string name="view_all_assets">View all assets</string>
    <string name="news">News</string>
    <string name="ticker_name">Ticker/Name</string>
    <string name="quantity">Quantity</string>
    <string name="name_empty_error">Name cannot be empty!</string>
    <string name="invalid_type_error">Invalid type!</string>
    <string name="quantity_empty_error">Quantity cannot be empty!</string>
    <string name="delete">Delete</string>
    <string name="last_updated_price">Last updated price</string>
    <string name="update">Update</string>
    <string name="add_stock_price_error">Failed to fetch stock price for given ticker!</string>
    <string name="add_crypto_price_error">Failed to fetch crypto price for given ticker!</string>
</resources>