<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssetDetailsActivity">

    <TextView
        android:id="@+id/asset_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="40sp"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/asset_details_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/asset_details_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="17.5sp"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asset_details_name" />

    <TextView
        android:id="@+id/asset_details_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="@string/quantity"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/asset_details_quantity_edit"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:hint="@string/quantity"
        app:layout_constraintBottom_toBottomOf="@+id/asset_details_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/asset_details_quantity" />

    <Button
        android:id="@+id/asset_details_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="@+id/asset_details_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/asset_details_quantity" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_updated_price"
        android:textSize="17.5sp"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asset_details_quantity_edit" />

    <TextView
        android:id="@+id/price_dollar_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar_sign"
        android:textSize="20sp"
        android:layout_marginEnd="5sp"
        app:layout_constraintBottom_toBottomOf="@+id/asset_details_price"
        app:layout_constraintEnd_toStartOf="@+id/asset_details_price"
        app:layout_constraintTop_toTopOf="@+id/asset_details_price" />

    <TextView
        android:id="@+id/asset_details_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/price_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/price_label" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

</androidx.constraintlayout.widget.ConstraintLayout>