<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssetsListActivity">

    <TextView
        android:id="@+id/stocks_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stocks"
        android:textSize="20sp"
        android:layout_margin="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stocks_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stocks_text" />

    <TextView
        android:id="@+id/crypto_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/crypto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stocks_recycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/crypto_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@+id/crypto_text" />

    <TextView
        android:id="@+id/other_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_not_fetched"
        android:textSize="20sp"
        android:layout_margin="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crypto_recycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/other_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_text" />

</androidx.constraintlayout.widget.ConstraintLayout>